style.css
#createiframeButton {
    position: relative;
    z-index: 100;
    margin-right: 15px;
    background-color: #4268ff;
    border: 2px solid #3c57c2;
    color: white;
    padding: 8px 10px;
    text-align: center;
    text-decoration: none;
    display: flex;
    align-items: center;
    font-size: 16px;
    font-weight: bold;
    cursor: pointer;
    border-radius:10px;
}

#createiframeButton:hover {
    background-color: #3c57c2;
}

